--- a/Manifest.json
+++ b/Manifest.json
@@ -2,22 +2,23 @@
     "name": "Weather PWA",
     "short_name": "Weather",
     "description": "A simple weather progressive web app",
-    "start_url": "https://gdmastin42.github.io/",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#343a40",
     "theme_color": "#343a40",
     "icons": [
       {
-        "src": "/gdmastin42.github.io/logo192.png",
+        "src": "icons/logo192.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "any maskable"
       },
       {
-        "src": "/gdmastin42.github.io/icons/logo512.png",
+        "src": "icons/logo512.png",
         "sizes": "512x512",
         "type": "image/png",
         "purpose": "any maskable"
       }
     ]
-}
+  }
+  
