--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,21 @@
 {
-    "name": "Weather PWA",
+    "name": "Weather App",
     "short_name": "Weather",
-    "description": "A simple weather progressive web app",
+    "description": "A simple weather app",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#343a40",
     "theme_color": "#343a40",
     "icons": [
       {
-        "src": "icons/logo192.png",
+        "src": "icons/android-chrome-192x192.png",
         "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any maskable"
+        "type": "image/png"
       },
       {
-        "src": "icons/logo512.png",
+        "src": "icons/android-chrome-512x512.png",
         "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "any maskable"
+        "type": "image/png"
       }
     ]
   }
